ghidra_project_bundle/test_run.txt
INFO  Using log config file: jar:file:/C:/Users/bluefield/Downloads/luduvo/ghidra_12.1.2_PUBLIC/Ghidra/Framework/Generic/lib/Generic.jar!/generic.log4j.xml (LoggingInitialization)  
INFO  Using log file: C:\Users\bluefield\AppData\Roaming\ghidra\ghidra_12.1.2_PUBLIC\application.log (LoggingInitialization)  
INFO  Loading user preferences: C:\Users\bluefield\AppData\Roaming\ghidra\ghidra_12.1.2_PUBLIC\preferences (Preferences)  
INFO  Searching for classes... (ClassSearcher)  
INFO  Class search complete (869 ms) (ClassSearcher)  
INFO  Initializing SSL Context (DefaultSSLContextInitializer)  
INFO  Initializing Random Number Generator... (SecureRandomFactory)  
INFO  Random Number Generator initialization complete: SHA1PRNG (SecureRandomFactory)  
INFO  Trust manager disabled, cacerts have not been set (DefaultTrustManagerFactory)  
INFO  Headless startup complete (2635 ms) (AnalyzeHeadless)  
INFO  Class searcher loaded 59 extension points (20 false positives) (ClassSearcher)  
INFO  HEADLESS Script Paths:
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\PyGhidra\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\FunctionID\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Debug\Debugger\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Processors\DATA\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\Decompiler\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\PDB\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\MicrosoftCodeAnalyzer\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\SwiftDemangler\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Processors\PIC\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\BSim\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Processors\8051\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\SystemEmulation\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\BytePatterns\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Processors\Atmel\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\DecompilerDependent\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\WildcardAssembler\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\Base\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\VersionTracking\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\FileFormats\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Debug\Debugger-rmi-trace\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\GnuDemangler\ghidra_scripts
    C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Processors\JVM\ghidra_scripts (HeadlessAnalyzer)  
INFO  HEADLESS: execution starts (HeadlessAnalyzer)  
INFO  Opening existing project: C:\Users\bluefield\Downloads\luduvo\ghidra_project_bundle\BundleAnalysis (HeadlessAnalyzer)  
INFO  Opening project: C:\Users\bluefield\Downloads\luduvo\ghidra_project_bundle\BundleAnalysis (HeadlessProject)  
INFO  REPORT: Processing project file: /LuduvoApp.exe (HeadlessAnalyzer)  
INFO  REPORT: Execute script: C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\Base\ghidra_scripts\TestScript.java  (HeadlessAnalyzer)  
analyzeHeadless.bat : CountCppResultsScript.java:168: error: reference to Enum is ambiguous
At line:1 char:213
+ ... ct_bundle"; & "$ghidraDir\support\analyzeHeadless.bat" "$projectDir"  ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (CountCppResults...um is ambiguous:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
            } else if (dt instanceof Enum) {
                                     ^
  both interface ghidra.program.model.data.Enum in ghidra.program.model.data and class java.lang.Enum in java.lang 
match
skipping 
C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\Base\ghidra_scripts\CountCppResultsScript.java
INFO  SCRIPT: C:\Users\bluefield\Downloads\luduvo\ghidra_12.1.2_PUBLIC\Ghidra\Features\Base\ghidra_scripts\TestScript.java (HeadlessAnalyzer)  
INFO  TestScript.java> TestScript done. (GhidraScript)  
INFO  REPORT: Save succeeded for processed file: /LuduvoApp.exe (HeadlessAnalyzer)  
